--- a/PMS-PropertyHapa.Staff/wwwroot/htmltopdf.html
+++ b/PMS-PropertyHapa.Staff/wwwroot/htmltopdf.html
@@ -26,7 +26,6 @@
                 <td colspan="2" style="border: solid 1px #ddd; padding:10px 20px;">
                     <p style="font-size:14px;margin:0 0 6px 0;"><span style="font-weight:bold;display:inline-block;min-width:150px">Invoice Status</span><b style="color:#6362e7;font-weight:normal;margin:0">{InvocieStatus}</b></p>
                     <p style="font-size:14px;margin:0 0 6px 0;"><span style="font-weight:bold;display:inline-block;min-width:146px">Invoice No</span> {InvoiceID}</p>
-                    <p style="font-size:14px;margin:0 0 0 0;"><span style="font-weight:bold;display:inline-block;min-width:150px">Invoice Amount</span>{Total}</p>
                     <p style="font-size:14px;margin:0 0 0 0;"><span style="font-weight:bold;display:inline-block;min-width:150px">Invoice Date</span>{currentdate}</p>
                 </td>
             </tr>
@@ -43,7 +42,7 @@
                 </td>
                 <td style="width:50%;padding:15px;vertical-align:top">
                     <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">To</span></p>
-                    <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Company Name:</span> {Company_Name}</p>
+                    <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Company Name:</span> {User_Company}</p>
                     <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px">Name:</span> {User_Name}</p>
                     <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Email:</span> {User_Email}</p>
                     <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Phone:</span> {User_Phone}</p>
@@ -58,9 +57,7 @@
                         <span style="display:block;font-size:13px;font-weight:bold;">Subscription Name </span>{SubscriptionName}<b style="font-size:12px;font-weight:300;"></b>
                     </p>
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Subscription Period</span> {SubscriptionPeriod} </p>
-                    <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Subscription Amount</span> {SubscriptionAmount} </p>
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Setup Fee</span> {SetupFee} </p>
-                    <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Discount</span> {Discount} </p>
                     
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Total</span> {Total}</p>
                 </td>
