--- a/PMS-PropertyHapa/wwwroot/htmltopdf.html
+++ b/PMS-PropertyHapa/wwwroot/htmltopdf.html
@@ -54,10 +54,11 @@
             <tr>
                 <td colspan="2" style="padding:15px;">
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;">
-                        <span style="display:block;font-size:13px;font-weight:bold;">Subscription Name </span>{SubscriptionName}<b style="font-size:12px;font-weight:300;"></b>
+                        <span style="display:block;font-size:13px;font-weight:bold;">Subscription Interval </span>{SubscriptionInterval}<b style="font-size:12px;font-weight:300;"></b>
                     </p>
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Subscription Period</span> {SubscriptionPeriod} </p>
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Subscription Fee</span> {SetupFee} </p>
+                    <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Discount</span> {Discount} </p>
                     
                     <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;"><span style="display:block;font-size:13px;font-weight:bold;">Total</span> {Total}</p>
                 </td>
